@@ -1,6 +1,7 @@
 **0.4.1.1**
 
 - Support for the weird **Then Else** construct (If A Then Else B)
+- Fixed parsing bug for **Sub/Function definition** all on one line
 
 **0.4.1**
 
